--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: space-between;
     max-width: 1350px;
+    flex-wrap: wrap;
     flex: 1;
     
 }
@@ -39,9 +40,9 @@
 
 }
 .hs-paragraph{
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
-    font-weight: 400px;
+    font-weight: 400;
     line-height: 26px;
     color: rgba(0, 0, 0, 1);
 }
@@ -54,3 +55,12 @@
     border-radius: 10px;
     border: none;    
 }   
+@media (max-width: 1235px) {
+    .homepage-honeymoon-specials{
+        padding: 0 25px;
+    }
+    .honeymoon-specials-container{
+        justify-content: center;
+        gap: 15px;
+    }
+}
