--- a/styles/index.css
+++ b/styles/index.css
@@ -1,84 +1,86 @@
 
-.PR-3-homepage-best-services{
-    justify-content: center; align-items: center; display: block; min-height: 100vh;
-}
-
-.PR-3-bs-text1 h3{
-    align-content: center;
-    font-size: 18px; color: #DF6951; margin-left: 600px; margin-top: 200px;
-
-}
-.PR-3-bs-text2 h2{
-    align-content: center;
-    font-size: 50px; color:#181E4B ; line-height: 64.5px;margin-top: 10px; margin-left: 500px ;
-}
-.PR-3-bs-images { 
-    display: flex; 
-    margin: 0 20px; 
-    padding: 20px; 
-} 
-
-.photo { 
-    width: 120px; 
-    margin-left: 100px;
-    padding: 0 30px; 
-    height: 100px; 
-} 
-
-.homepage-honeymoon-specials{
+.homepage-best-services{
     display: flex;
     justify-content: center;
+    text-align: center;
+    border: 5px green;
 }
-
-.honeymoon-specials-container{ 
-    display: flex;
+.homepage-best-services-container{ 
     align-items: center;
     justify-content: space-between;
     max-width: 1350px;
+    flex-wrap: wrap;
     flex: 1;
-    
 }
-.hs-image-box{
-    max-width: 655px;
-}
-.hs-image{
-    width: 100%;     
-    
-}
-.hs-title-box{    
-    max-width: 583px;    
-    
-}
-.hs-subtitle{
-    font-family: "Poppins", sans-serif;
+.bs-subtitle{
+    color: #DF6951;
+    font-family: 'Poppins';
     font-size: 18px;
-    font-weight: 700;
-    line-height: 27px;
-    letter-spacing: 0.1em;
-    color:  rgba(223, 105, 81, 1);
+    font-weight: 600;
+    padding-bottom: 25px;
 }
-.hs-title{
-    font-family: "Volkhov", serif;
+.bs-title{
+    color: #181E4B;
+    font-family: 'Volkhov', sans-serif;
     font-size: 50px;
     font-weight: 700;
-    line-height: 71.04px;
-    color: rgba(24,30,75,1);
-
+    padding-bottom: 5px;
 }
-.hs-paragraph{
-    font-family: Poppins;
-    font-size: 16px;
-    font-weight: 400px;
-    line-height: 26px;
-    color: rgba(0, 0, 0, 1);
-}
-.hs-button{   
-    font-family: "Poppins", sans-serif;
+.bs-card-title{
+    font-family: 'Poppins';
+    font-size: 20px;
     font-weight: 600;
-    padding: 15px 25px;
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(223, 105, 81, 1);
-    border-radius: 10px;
-    border: none;    
-}   
+    line-height: 30px;
+    text-align: center;
+    margin: auto;
+    padding: 20px;
+}
+.bs-card-paragraph{
+    font-family: 'Poppins';
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+    text-align: center;
+    color: #5E6282;
+    margin: auto;
+    padding: 10px;
+    ;
+}
 
+.bs-cardbox{
+    display: flex;
+    margin-top: 20px;
+    
+}
+
+.bs-card{
+    flex: 1;
+}
+.images-span{
+    border-radius: 18px 5px 10px 5px;
+    width: 50px;
+    height: 49px;
+    background: #FFF1DA;
+    position: absolute;
+    z-index: -1;
+}
+.span-1{
+    right: -15px;
+    bottom: -10px;
+}
+.bs-card-with-shadow{
+    border-radius: 36px;
+    box-shadow: 0px 1.85185px 3.14815px 0px rgba(0, 0, 0, 0.00), 0px 8.14815px 6.51852px 0px rgba(0, 0, 0, 0.01), 0px 20px 13px 0px rgba(0, 0, 0, 0.01), 0px 38.51852px 25.48148px 0px rgba(0, 0, 0, 0.01), 0px 64.81481px 46.85185px 0px rgba(0, 0, 0, 0.02), 0px 100px 80px 0px rgba(0, 0, 0, 0.02);
+    position: relative;
+    background: #fff;
+}
+.bs-card-with-shadow-span{
+    width: 100px;
+    height: 100px;
+    background: #DF6951;
+    border-radius: 30px;
+    position: absolute;
+    left: -40px;
+    bottom: -35px;
+    z-index: -1;
+}
