--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,7 @@
 }
 .hs-subtitle {
   font-family: "Poppins", sans-serif;
-  font-size: 18px;
+  font-size: clamp(12px, 3vw, 16px);
   font-weight: 700;
   line-height: 27px;
   letter-spacing: 0.1em;
@@ -37,9 +37,9 @@
 }
 .hs-paragraph {
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
+  font-size: clamp(8px, 4vw, 16px);
   font-weight: 400;
-  line-height: 26px;
+  line-height: clamp(12px, 4vw, 26px);
   color: rgba(0, 0, 0, 1);
 }
 .hs-button {
