--- a/styles/index.css
+++ b/styles/index.css
@@ -44,7 +44,10 @@
     padding: 10px;
     ;
 }
-
+.bs-image{
+    position: relative; width: fit-content;margin: auto;
+    z-index: 1;
+}
 .bs-cardbox{
     display: flex;
     margin-top: 20px;
@@ -69,6 +72,10 @@
     right: -15px;
     bottom: -10px;
 }
+.span-2{
+    top: 13px;
+    left: -7px;
+}
 .bs-card-with-shadow{
     border-radius: 36px;
     box-shadow: 0px 1.85185px 3.14815px 0px rgba(0, 0, 0, 0.00), 0px 8.14815px 6.51852px 0px rgba(0, 0, 0, 0.01), 0px 20px 13px 0px rgba(0, 0, 0, 0.01), 0px 38.51852px 25.48148px 0px rgba(0, 0, 0, 0.01), 0px 64.81481px 46.85185px 0px rgba(0, 0, 0, 0.02), 0px 100px 80px 0px rgba(0, 0, 0, 0.02);
@@ -85,4 +92,12 @@
     left: -40px;
     bottom: -35px;
     z-index: -1;
+}
+.span-3{
+    right: -17px;
+    bottom: -8px;
+}
+.span-4{
+    right: -14px;
+    bottom: 0;
 }
