--- a/styles/index.css
+++ b/styles/index.css
@@ -82,13 +82,13 @@
   object-fit: cover;
 }
 
-.es-titles {
+.es-titles-boxes {
   max-width: 405px;
   position: absolute;
   text-align: center;
   top: 50%;
   left: 50%;
-  transform: translate(-50px, -50px);
+  transform: translate(-50%, -50%);
 }
 .es-subtitles {
   font-family: "Poppins", sans-serif;
@@ -99,7 +99,7 @@
   padding: 15px 25px;
 }
 
-.es-tlr {
+.es-titles {
   font-family: "Volkhov", serif;
   font-size: clamp(24px, 5vw, 50px);
   font-weight: 700;
@@ -107,8 +107,23 @@
   color: rgba(255, 255, 255, 1);
 }
 
+.es-signatures {
+  width: 425px;
+  text-align: end;
+}
+
+.es-buttons {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  padding: 15px 25px;
+  color: rgba(255, 255, 255, 1);
+  background-color: transparent;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 1);
+  box-shadow: 0px 20px 35px 0px rgba(223, 105, 81, 0.15);
+}
 @media (max-width: 1000px) {
   .explore-section-container {
-    justify-content: center;
+    flex-wrap: wrap;
   }
 }
