--- a/styles/index.css
+++ b/styles/index.css
@@ -60,3 +60,99 @@
     gap: 15px;
   }
 }
+
+.homepage-favorite-resorts {
+  display: flex;
+  justify-content: center;
+}
+
+.favorite-resorts-container {
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  max-width: 1350px;
+  flex-wrap: wrap;
+  flex: 1;
+  gap: 75px;
+  height: 600px;
+  /* max-width: 1605px; */
+}
+
+.fr-context {
+  max-width: 458px;
+  height: 488px;
+}
+
+.fr-heading-box {
+  width: 458px;
+  height: 172px;
+  margin-bottom: 25px;
+}
+
+.subheading {
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 27px;
+  color: rgba(223, 105, 81, 1);
+  margin-bottom: 15px;
+}
+
+.heading {
+  font-family: Volkhov;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 64.5px;
+  color: rgba(24, 30, 75, 1);
+}
+
+.fr-script-box  {
+  max-width: 395px;
+}
+
+.whole-script {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.image {
+  width: 47px;
+  height: 48px;
+}
+
+.script {
+  width: 327px;
+  height: 64px;
+}
+
+.title {
+  width: 161px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19.92px;
+  color: rgba(94, 98, 130, 1);
+  margin-bottom: 3px;
+}
+
+.paragraph{
+  width: 327px;
+  height: 40px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.92px;
+  color: rgba(94, 98, 130, 1)
+}
+
+.fr-illustration {
+  max-width: 869px;
+  max-height: 600px;
+}
+
+.illustration {
+  width: 100%;
+}
