--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,7 @@
   justify-content: center;
   text-align: center;
   border: 5px green;
+  padding: 50px 0;
 }
 .homepage-best-services-container {
   align-items: center;
@@ -105,6 +106,7 @@
 .homepage-honeymoon-specials {
   display: flex;
   justify-content: center;
+  padding: 50px 0;
 }
 
 .honeymoon-specials-container {
@@ -167,6 +169,7 @@
 
 .homepage-explore-section {
   display: flex;
+  padding: 50px 0;
 }
 .explore-section-container {
   display: flex;
