--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,106 @@
+
+.homepage-best-services{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border: 5px green;
+}
+.homepage-best-services-container{ 
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1350px;
+    flex-wrap: wrap;
+    flex: 1;
+}
+.bs-subtitle{
+    color: #DF6951;
+    font-family: 'Poppins';
+    font-size: 18px;
+    font-weight: 600;
+    padding-bottom: 25px;
+}
+.bs-title{
+    color: #181E4B;
+    font-family: 'Volkhov', sans-serif;
+    font-size: 50px;
+    font-weight: 700;
+    padding-bottom: 5px;
+}
+.bs-card-title{
+    font-family: 'Poppins';
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    padding: 20px 0;
+}
+.bs-card-paragraph{
+    font-family: 'Poppins';
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+    text-align: center;
+    color: #5E6282;
+    margin: auto;
+    padding: 10px;
+    ;
+}
+.bs-image{
+    position: relative; width: fit-content;margin: auto;
+    z-index: 1;
+}
+.bs-cardbox{
+    display: flex;
+    margin-top: 20px;
+    gap: 50px;
+    justify-content: center;
+    max-width: 1350px;
+    flex-wrap: wrap;
+}
+
+.bs-card{
+    
+}
+.images-span{
+    border-radius: 18px 5px 10px 5px;
+    width: 50px;
+    height: 49px;
+    background: #FFF1DA;
+    position: absolute;
+    z-index: -1;
+}
+.span-1{
+    right: -15px;
+    bottom: -10px;
+}
+.span-2{
+    top: 13px;
+    left: -7px;
+}
+.bs-card-with-shadow{
+    border-radius: 36px;
+    box-shadow: 0px 1.85185px 3.14815px 0px rgba(0, 0, 0, 0.00), 0px 8.14815px 6.51852px 0px rgba(0, 0, 0, 0.01), 0px 20px 13px 0px rgba(0, 0, 0, 0.01), 0px 38.51852px 25.48148px 0px rgba(0, 0, 0, 0.01), 0px 64.81481px 46.85185px 0px rgba(0, 0, 0, 0.02), 0px 100px 80px 0px rgba(0, 0, 0, 0.02);
+    position: relative;
+    padding: 0 35px 45px;
+    background: #fff;
+}
+.bs-card-with-shadow-span{
+    width: 100px;
+    height: 100px;
+    background: #DF6951;
+    border-radius: 30px;
+    position: absolute;
+    left: -40px;
+    bottom: -35px;
+    z-index: -1;
+}
+.span-3{
+    right: -17px;
+    bottom: -8px;
+}
+.span-4{
+    right: -14px;
+    bottom: 0;
+}
 .homepage-honeymoon-specials {
   display: flex;
   justify-content: center;
@@ -62,30 +165,26 @@
 }
 
 .homepage-favorite-resorts {
+  padding: 50px 20px;
   display: flex;
   justify-content: center;
 }
 
 .favorite-resorts-container {
   display: flex;
+  justify-content: space-between;
   align-items: center; 
-  justify-content: center;
-  max-width: 1350px;
   flex-wrap: wrap;
   flex: 1;
-  gap: 75px;
-  height: 600px;
-  /* max-width: 1605px; */
+  max-width: 1350px;
 }
 
 .fr-context {
-  max-width: 458px;
-  height: 488px;
+  max-width: 458px; 
 }
 
 .fr-heading-box {
-  width: 458px;
-  height: 172px;
+  max-width: 458;
   margin-bottom: 25px;
 }
 
@@ -100,7 +199,7 @@
 
 .heading {
   font-family: Volkhov;
-  font-size: 50px;
+  font-size: clamp(40px, 4vw, 50px);
   font-weight: 700;
   line-height: 64.5px;
   color: rgba(24, 30, 75, 1);
@@ -108,6 +207,9 @@
 
 .fr-script-box  {
   max-width: 395px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 
 .whole-script {
@@ -115,21 +217,17 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin-bottom: 50px;
 }
 
-.image {
+.whole-script .image {
   width: 47px;
-  height: 48px;
 }
 
 .script {
   width: 327px;
-  height: 64px;
 }
 
-.title {
-  width: 161px;
+.script .title {
   font-family: Poppins;
   font-size: 16px;
   font-weight: 700;
@@ -138,9 +236,7 @@
   margin-bottom: 3px;
 }
 
-.paragraph{
-  width: 327px;
-  height: 40px;
+.script .paragraph{
   font-family: Poppins;
   font-size: 16px;
   font-weight: 400;
@@ -150,9 +246,18 @@
 
 .fr-illustration {
   max-width: 869px;
-  max-height: 600px;
 }
 
 .illustration {
   width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .favorite-resorts-container {
+      justify-content: center;
+  }
+
+  .illustration {
+    display: block;
+  }
 }
