--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,30 @@
+.ps-slide-image {
+  width: 200px;
+  height: 100px;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  filter: grayscale(100%);
+  animation: scroll 60s linear infinite;
+}
+
+.homepage-partners-section-container {
+  width: 100%;
+  display: flex;
+  gap: 10em;
+  overflow: hidden;
+}
+
+.homepage-partners-section {
+  margin-top: 20px;
+  background-color: whitesmoke;
+  padding: 3em;
+}
+
+@keyframes scroll {
+  0% {transform: translateX(0);}
+  100% {transform: translatex(-500%)}
+}
+
 .homepage-best-services {
   display: flex;
   justify-content: center;
@@ -164,6 +191,104 @@
   .honeymoon-specials-container {
     justify-content: center;
     gap: 15px;
+  }
+}
+.homepage-favorite-resorts {
+  padding: 50px 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.favorite-resorts-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  flex: 1;
+  max-width: 1350px;
+}
+
+.fr-context {
+  max-width: 458px;
+}
+
+.fr-heading-box {
+  max-width: 458px;
+  margin-bottom: 25px;
+}
+
+.hb-subheading {
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 27px;
+  color: rgba(223, 105, 81, 1);
+  margin-bottom: 15px;
+}
+
+.hb-heading {
+  font-family: Volkhov;
+  font-size: clamp(40px, 4vw, 50px);
+  font-weight: 700;
+  line-height: 64.5px;
+  color: rgba(24, 30, 75, 1);
+}
+
+.fr-script-box {
+  max-width: 395px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.sb-whole-script {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.ws-image {
+  max-width: 47px;
+}
+
+.sb-partial-script {
+  max-width: 327px;
+}
+
+.ps-title {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19.92px;
+  color: rgba(94, 98, 130, 1);
+  margin-bottom: 3px;
+}
+
+.ps-paragraph {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.92px;
+  color: rgba(94, 98, 130, 1);
+}
+
+.fr-illustration {
+  max-width: 869px;
+}
+
+.illustration {
+  width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .favorite-resorts-container {
+    justify-content: center;
+    gap: 25px;
+  }
+
+  .illustration {
+    display: block;
   }
 }
 
