--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,6 @@
   opacity: 0.4;
   filter: alpha(opacity=40);
   filter: grayscale(100%);
-  animation: scroll 60s linear infinite;
 }
 
 .homepage-partners-section-container {
@@ -12,17 +11,22 @@
   display: flex;
   gap: 10em;
   overflow: hidden;
+  animation: scroll 20s linear infinite;
 }
 
 .homepage-partners-section {
-  margin-top: 20px;
-  background-color: whitesmoke;
-  padding: 3em;
+  width: 200%;
+  height: 100px;
+  position: relative;
+  background: white;
+  box-shadow: 0 10px 20px -10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  gap: 20px;
 }
 
 @keyframes scroll {
-  0% {transform: translateX(0);}
-  100% {transform: translatex(-500%)}
+  from{transform: translateX(0);}
+  to {transform: translateX(-100%)}
 }
 
 .homepage-best-services {
