--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,9 @@
 }
 .homepage-partners-section{
   width: 100%;
-  background-color: smoke;
+  background-color: #F7F7F7;
+  display: flex;
+  height: 100px;
 }
 .homepage-partners-section-container {
   overflow: hidden;
