--- a/styles/index.css
+++ b/styles/index.css
@@ -18,7 +18,8 @@
   padding-top: 66px;
 }
 
-.hes-navbar a {
+.hes-navbar a,
+.hes-hamburger-menu a {
   font-family: "Montserrat", sans-serif;
   font-size: 17px;
   font-weight: 500;
@@ -27,7 +28,22 @@
   text-decoration: none;
   position: relative;
 }
-
+.hes-hamburger-menu a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 0;
+  height: 1px;
+  background-color: #000;
+  transition: width 0.3s ease;
+}
+.hes-hamburger-menu a:hover::after {
+  width: 100%;
+  height: 3px;
+  border-radius: 34px;
+  background-color: rgba(223, 105, 81, 1);
+}
 .hes-navbar a::after {
   content: "";
   position: absolute;
@@ -67,6 +83,10 @@
 }
 
 .hes-navbar li:hover .hes-dropdown-menu {
+  display: block;
+}
+
+.hes-hamburger-menu li:hover .hes-drop-menu {
   display: block;
 }
 
@@ -169,18 +189,30 @@
   display: none;
 }
 @media (max-width: 1000px) {
+  .hero-section-container button {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(-50%);
+  }
+  .hes-hamburger-menu {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    line-height: 2;
+  }
   .hes-navbar {
     flex-direction: column;
     text-align: center;
+    display: none;
   }
-  .hes-hamburger-menu {
-    display: block;
-    text-align: center;
-  }
+
   .hes-select-box {
     flex-direction: column;
     align-items: flex-start;
   }
+
   .hes-select-box button {
     width: 100%;
   }
@@ -189,7 +221,10 @@
   }
   .hes-title-box {
     gap: 10px;
-    padding-left: 35px;
+    padding-left: 25%;
+  }
+  .hes-drop-menu {
+    display: none;
   }
 }
 .homepage-best-services {
