--- a/styles/index.css
+++ b/styles/index.css
@@ -456,7 +456,7 @@
   justify-content: center;
   background-color: rgb(248, 248, 248);
   position: relative;
-  margin-top: 75px 0px;
+  margin-top: 75px;
   z-index: 0;
 }
 
