--- a/styles/about.css
+++ b/styles/about.css
@@ -15,7 +15,7 @@
   max-width: 639px;
   padding-right: 15px;
 }
-.pro-title-box h6 {
+.pro-subtitle {
   font-family: "Poppins", sans-serif;
   font-size: clamp(8px, 3vw, 12px);
   font-weight: 700;
@@ -23,14 +23,14 @@
   letter-spacing: 0.1em;
   color: rgba(223, 105, 81, 1);
 }
-.pro-title-box h2 {
+.pro-title {
   font-family: "Volkhov", serif;
   font-size: clamp(14px, 5vw, 33px);
   font-weight: 700;
   line-height: clamp(20px, 5vw, 35px);
   color: rgba(24, 30, 75, 1);
 }
-.pro-title-box p {
+.pro-paragraph {
   font-family: "Poppins", sans-serif;
   font-size: clamp(6px, 4vw, 10px);
   font-weight: 400;
@@ -38,9 +38,10 @@
   color: rgba(0, 0, 0, 1);
   padding-top: 10px;
 }
-.pro-title-box button {
+.pro-button {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
+  font-size: clamp(8px, 2vw, 17px);
   padding: 15px 25px;
   color: rgba(255, 255, 255, 1);
   background-color: rgba(223, 105, 81, 1);
@@ -51,7 +52,7 @@
 .pro-img {
   max-width: 578px;
 }
-.pro-img img {
+.pro-inside-img {
   width: 100%;
   height: 100%;
 }
@@ -62,5 +63,8 @@
   .about-promotion-container {
     justify-content: center;
     gap: 15px;
+  }
+  .pro-button {
+    padding: 10px 10px;
   }
 }
