--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,35 @@
+.ps-slide-image {
+  height: 50px;
+  opacity: 0.4;
+  padding: 0 55px;
+  filter: alpha(opacity=40);
+  filter: grayscale(100%);
+
+}
+
+.ps-logo {
+  display: flex;
+  animation: scroll 10s linear infinite;
+
+}
+.homepage-partners-section{
+  width: 100%;
+  background-color: #F7F7F7;
+  display: flex;
+  height: 100px;
+}
+.homepage-partners-section-container {
+  overflow: hidden;
+  display: flex;
+  max-width: 1350px;
+  margin: auto;
+}
+
+@keyframes scroll {
+  from{transform: translateX(0);}
+  to {transform: translatex(-100%)}
+}
+
 .homepage-best-services {
   display: flex;
   justify-content: center;
@@ -185,20 +217,42 @@
   line-height: 71px;
 }
 
+.homepage-tour-package-container {
+  text-align: center;
+  margin: 150px 20px 50px 20px;
+}
+.tp-h5 {
+  color: #df6951;
+  font-size: 18px;
+  font-family: "Poppins", serif;
+  font-weight: 700;
+  letter-spacing: 1.8px;
+}
+.tp-h2 {
+  color: #181e4b;
+  font-family: "Volkhov", sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 71px;
+}
+
 .homepage-tour-package-container-box {
   display: grid;
   max-width: 1500px;
-  grid-template-columns: repeat(auto-fit , minmax(250px , 400px));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 400px));
   gap: 100px;
   margin: auto;
   justify-content: center;
 }
-.tp-box{
+.tp-box {
   text-align: left;
 }
 .tp-box-images {
   position: relative;
   margin: 50px 0 30px 0;
+}
+.tp-box-image{
+  width: 100%;
 }
 .tp-box-flag {
   position: absolute;
@@ -214,62 +268,73 @@
   gap: 5px;
   padding-bottom: 10px;
 }
+.tp-box-spans-star {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
 .tp-box-spans p {
   font-size: 17px;
   color: #7d7d7d;
   font-weight: 400;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
-.tp-box-title{
+.tp-box-title {
   display: flex;
   justify-content: space-between;
   padding-bottom: 5px;
-  align-items: end;
+  align-items: center;
 }
 .tp-box-title h4 {
   color: #2f2f2f;
   font-size: 29px;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-weight: 700;
 }
-.tp-box-pricings{
+.tp-box-pricings {
   display: flex;
   gap: 20px;
-  align-items: center;
+  align-items: end;
   padding-bottom: 4px;
 }
 .tp-box-pricings h4 {
-  color: #DF6951;
+  color: #df6951;
   font-size: 29px;
   font-weight: 500;
-  font-family: 'Poppins';
+  line-height: 35px;
+  font-family: "Poppins";
 }
 .tp-box-pricings h5 {
   color: #7d7d7d;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-size: 22px;
   font-weight: 500;
   text-decoration: line-through;
 }
 .tp-box-p {
   color: black;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-size: 12px;
   font-weight: 400;
   line-height: 24.5px;
   letter-spacing: 0.61px;
   padding-bottom: 25px;
 }
-.tp-box-button{
+.tp-box-button {
   display: inline-block;
   padding: 10px 25px;
-  background-color: #DF6951;
+  background-color: #df6951;
   border-radius: 8px;
   font-size: 10px;
   font-weight: 600;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #fff;
   font-size: 17px;
+}
+.homepage-favorite-resorts {
+  padding: 50px 20px;
+  display: flex;
+  justify-content: center;
 }
 .homepage-favorite-resorts {
   padding: 50px 20px;
